--- a/eShop/Properties/launchSettings.json
+++ b/eShop/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/NguoiDung",
+      "launchUrl": "api/NguoiBan",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "eShop": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/NguoiDung",
+      "launchUrl": "api/NguoiBan",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
