--- a/eShop/appsettings.json
+++ b/eShop/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=TRANG\\SQLDEV2019;Database=E_Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=.\\SQLSERVER;Database=E_Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
+        //"Server=TRANG\\SQLDEV2019;Database=E_Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
