--- a/eShop/appsettings.json
+++ b/eShop/appsettings.json
@@ -1,8 +1,9 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=.\\SQLSERVER;Database=E_Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
-        //"Server=TRANG\\SQLDEV2019;Database=E_Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=TRANG\\SQLDEV2019;Database=E_Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"Server=.\\SQLSERVER;Database=E_Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"Server=TRANG\\SQLDEV2019;Database=E_Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
