--- a/eShop/appsettings.json
+++ b/eShop/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=TRANG\\SQLDEV2019;Database=E_Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=MIRINDACOCA;Database=E_Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"Server=.\\SQLSERVER;Database=E_Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"Server=TRANG\\SQLDEV2019;Database=E_Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
